Add participants section to activity cards and enhance styles

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,27 @@
         <h3>Available Activities</h3>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
-          <p>Loading activities...</p>
+          <!-- Example card showing the new "Participants" section.
+               Dynamic content injected by app.js should use the same classes:
+               .activity-card > .participants-section > .participants-list -->
+          <div class="activity-card">
+            <h4>Chess Club</h4>
+            <p>Learn strategies and compete in chess tournaments</p>
+            <p><strong>Schedule:</strong> Fridays, 3:30 PM - 5:00 PM</p>
+            <div class="participants-section">
+              <h5>Participants</h5>
+              <ul class="participants-list">
+                <li>
+                  <span class="participant-avatar">MJ</span>
+                  <span class="participant-email">michael@mergington.edu</span>
+                </li>
+                <li>
+                  <span class="participant-avatar">DB</span>
+                  <span class="participant-email">daniel@mergington.edu</span>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
