Implement participant unregistration feature and associated tests

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -30,10 +30,12 @@
                 <li>
                   <span class="participant-avatar">MJ</span>
                   <span class="participant-email">michael@mergington.edu</span>
+                  <button class="participant-delete" title="Remove participant" aria-label="Remove participant">✕</button>
                 </li>
                 <li>
                   <span class="participant-avatar">DB</span>
                   <span class="participant-email">daniel@mergington.edu</span>
+                  <button class="participant-delete" title="Remove participant" aria-label="Remove participant">✕</button>
                 </li>
               </ul>
             </div>
